[build-dependencies]
embed-resource = "1.4"

[dependencies]
dexterous_developer = "0.1"
serde = "1"

[dependencies.bevy]
default-features = false
features = ["animation", "bevy_asset", "bevy_gilrs", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "png", "hdr", "x11", "bevy_gizmos", "tonemapping_luts", "default_font", "webgl2"]
version = "0.12"

[dependencies.bevy_asset_loader]
version = "0.19"

[dependencies.bevy_kira_audio]
version = "0.18"

[dependencies.image]
default-features = false
version = "0.24"

[dependencies.rand]
version = "0.8.3"

[dependencies.webbrowser]
features = ["hardened"]
version = "0.8"

[dependencies.winit]
default-features = false
version = "0.28.7"

[features]
dev = ["bevy/dynamic_linking"]

[lib]
crate-type = ["dylib", "rlib"]
name = "lib_bevy_game"
path = "src/lib.rs"

[package]
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]
name = "bevy_game"
publish = false
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
codegen-units = 1
inherits = "release"
lto = true
opt-level = 3
strip = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace]
members = ["mobile"]
